[package]
name = "rustiot"
version = "0.0.10"
edition = "2021"

[[bin]]
name = "rustiot"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.0"
actix = "0.13.1"
serde = "1.0"
rusqlite = "0.30"
reqwest = "0.11"
mqtt = "0.1.4"